2005-10-01  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* Renamed src/history.c to src/map_history.c
	* Renamed src/tooltip.c to src/tooltipwindow.c
	* Renamed src/downloader.c to src/downloadmanager.c
	* src/glyph.c: Only require a targetwidget when generating a pixmap.
	* src/main.c: Move glyph module init here.
	* src/*: Fix all compiler warning messages.

2005-09-30  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/welcomewindow.c: Removed.
	* src/gui.c: Removed welcome window.
	* src/db.c: Added bounding rect calculation to pointstring loading.
	* src/search_road.c: Update to new pointstring loading function.
	* src/mainwindow.c: Removed unneeded includes.
	* src/map.c: Add rect overlap test function.
	* src/map_draw_gdk.c: Use rect overlap test from map.c.
	* src/tooltip.c: Remove unused init function.

2005-09-30  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/road.c: Removed alloc/dealloc of road_t.
	* src/point.c:
	* src/point.h:
	* src/pointstring.c:
	* src/pointstring.h: Removed, since road_t now has a basic GArray of mappoint_t objects.
	* src/*.c: Use new road_t format.

2005-09-30  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/locationselection.c:
	* src/locationselection.h:
	* src/track.c:
	* src/track.h: Removed these unused files.
	* src/map_draw_gdk.c:
	* src/mainwindow.c: Commented out track code.
	* src/animator.c:
	* src/downloader.c: Removed unused init() functions.
	* src/main.c: Removed calls to *_init() for above.

2005-09-30  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/downloader.c: Added.  This provides an easy interface to asyncronous file downloads.

2005-09-29  Ian McIntosh  <ian_mcintosh@linuxadvocate.org>

	* src/map_style.c: Removed "constants"-- found out that XML already has this feature!
	* src/glyph.c: Don't load the same image twice.  Allow loading at image's native resolution.